--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -42,3 +42,65 @@ button.add {
     border: none;
     border-radius: 5px;
 }
+
+main {
+    display: flex;
+    flex-flow: row wrap;
+    width: 90%;
+    margin: auto auto;
+    /*border: 1px solid blue;*/
+    padding-top: 40px;
+}
+
+.item {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    height: 80px;
+    width: 100%;
+    box-shadow: 0 0 20px #ccc;
+    margin-bottom: 2%;
+}
+
+.item.clicado {
+    background: #d4f6d9;
+}
+
+.item.clicado .item-nome {
+    text-decoration: line-through;
+    color: gray;
+}
+
+.item-icone {
+    flex: 20%;
+    /*border: solid orangered;*/
+    text-align: center;
+    font-size: 2rem;
+}
+
+.item-nome {
+    flex: 55%;
+    /*border: solid deeppink;*/
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.item-botao {
+    flex: 25%;
+    /*border: solid green;*/
+}
+
+.delete {
+    background: red;
+    color: white;
+    border: none;
+    padding: 10px;
+    height: 80px;
+    width: 100%;
+}
+
+.mdi-check-circle {
+    color: green;
+}
